--- a/docker-images/apache-php-image/src/index.html
+++ b/docker-images/apache-php-image/src/index.html
@@ -97,6 +97,8 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+	<!-- Custom script to load addresses -->
+	<script src="js/adresses.js"></script>
 
 </body>
 
